Benchmarks/Results/releases/v1.2.2/release-notes-proof.md
## Release Proof

- Release: `v1.2.2`
- Evidence bundle: `Benchmarks/Results/releases/v1.2.2`
- Git commit: `56bf6db83fcb8269e1dae5fe9f1e1249be34c80c`
- Benchmark profile: `standard`
- Benchmark run generated at: `2026-04-15T13:26:36Z`
- Evidence archived at: `2026-04-15T13:27:33Z`
- Performance score: `55.51`
- Average execution time: `0.0786s`
- Environment: `Version 26.4.1 (Build 25E253)`, `18` processors

## Adoption Snapshot

- strongest first-run flow: `Vision -> NLP -> Privacy`
- flagship demo validation: `bash Scripts/validate-flagship-demo.sh`
- public proof envelope is carried in `public-proof-status.md` when bundled

## Validation Gate

- `swift build -c release`
- `bash Scripts/validate-flagship-demo.sh`
- `bash Scripts/validate-examples.sh`
- `swift test`
- `bash Scripts/run-benchmarks.sh standard Benchmarks/Results/latest`
- immutable benchmark evidence archived under `Benchmarks/Results/releases/v1.2.2`

## Attached Artifacts

- [benchmark-summary.md](benchmark-summary.md)
- [benchmark-report.json](benchmark-report.json)
- [environment.json](environment.json)
- [metadata.json](metadata.json)
- [release-proof.md](release-proof.md)
- [benchmark-delta.md](benchmark-delta.md)
- [release-blockers.md](release-blockers.md)
- [public-proof-status.md](public-proof-status.md)
- [device-evidence-handoff.md](device-evidence-handoff.md)

## Benchmark Evidence

- Evidence bundle: `Benchmarks/Results/releases/v1.2.2`
- Snapshot name: `v1.2.2`
- Git ref: `v1.2.2`
- Git commit: `56bf6db83fcb8269e1dae5fe9f1e1249be34c80c`
- Benchmark profile: `standard`
- Benchmark run generated at: `2026-04-15T13:26:36Z`
- Evidence archived at: `2026-04-15T13:27:33Z`
- Evidence source kind: `local-directory`
- Evidence source path: `Benchmarks/Results/latest`
- Device class: `Mac`
- Device name: `muhittin-macbook-pro-2.local`
- Device model: `arm64`
- Platform family: `macOS`
- Total workloads: `25`
- Performance score: `55.51`
- Average execution time: `0.0786s`
- Environment: `Version 26.4.1 (Build 25E253)`, `18` processors, `48.0 GB` RAM
- Fastest workload: `ML_Prediction_Small` (`0.0061s`)
- Slowest workload: `ML_Model_Loading` (`0.3076s`)

Attached benchmark assets were copied from this immutable evidence bundle.

## Benchmark Delta

- Current evidence bundle: `Benchmarks/Results/releases/v1.2.2`
- Current git ref: `v1.2.2`
- Current generated at: `2026-04-15T13:26:36Z`

- Baseline evidence bundle: `Benchmarks/Results/releases/v1.2.1`
- Baseline git ref: `v1.2.1`
- Baseline generated at: `2026-04-15T13:00:40Z`

### Headline Deltas

| Metric | Current | Baseline | Delta |
| --- | ---: | ---: | ---: |
| Performance score | 55.51 | 55.55 | -0.08% |
| Average execution time (s) | 0.0786 | 0.0785 | +0.07% |
| Total memory (MB) | 247.8 | 246.9 | +0.35% |
| Workloads | 25 | 25 | +0 |

### Top Improvements

- `NLP_Sentiment_Analysis`: 0.0315s -> 0.0303s (-4.03%)
- `NLP_Entity_Recognition`: 0.0237s -> 0.0230s (-2.94%)
- `Vision_Face_Detection`: 0.0337s -> 0.0329s (-2.39%)
- `NLP_Text_Analysis_Small`: 0.0122s -> 0.0119s (-2.36%)
- `Vision_Image_Classification`: 0.0536s -> 0.0529s (-1.40%)

### Top Regressions

- `Cache_Read_Performance`: 0.0956s -> 0.1003s (+4.95%)
- `Cache_Write_Performance`: 0.0996s -> 0.1044s (+4.82%)
- `Privacy_Data_Anonymization`: 0.0172s -> 0.0178s (+3.67%)
- `Privacy_Tokenization`: 0.0231s -> 0.0239s (+3.47%)
- `Cache_Eviction_Test`: 0.0333s -> 0.0340s (+1.86%)

### Evidence Links

- Current summary: [benchmark-summary.md](benchmark-summary.md)
- Baseline summary: [`Benchmarks/Results/releases/v1.2.1/benchmark-summary.md`](../../Benchmarks/Results/releases/v1.2.1/benchmark-summary.md)
- Baseline metadata: [`Benchmarks/Results/releases/v1.2.1/metadata.json`](../../Benchmarks/Results/releases/v1.2.1/metadata.json)

Interpretation rule: negative execution-time delta is better. Cross-device comparisons are directional only.

# Release Blockers

Generated summary of the blockers that still prevent release-grade public benchmark positioning.

## Headline

- Publish readiness: `ready`
- Immutable release bundles: `3`
- Device classes seen: `Mac, iPhone`
- Missing required release device classes: `none`

## What Is Not Blocking

- The active modular graph is building and testing cleanly.
- Benchmark artifacts, manifests, checksums, provenance, and threshold gates are in place.
- Transfer, import, and packetized handoff flows already exist.

## What Is Blocking

- No required release device classes are currently missing.
- Remaining work is release hygiene, optional extra device breadth, and positioning quality.

## Immediate Execution Surface

- Capture packets: [Device-Capture-Packets.md](Device-Capture-Packets.md)
- Maintainer intake: [Device-Evidence-Intake.md](Device-Evidence-Intake.md)
- Operational runbook: [Device-Evidence-Runbook.md](Device-Evidence-Runbook.md)

## Exit Condition

- `Benchmark-Readiness.md` reports `ready`.
- `Device-Coverage-Matrix.md` includes all required release device classes from `device-matrix-policy.json`.
- `prepare-release.sh` still passes after the new bundles are archived.

# Public Proof Status

Generated claim envelope for distribution, README language, release messaging, and public positioning.

## Status

- Publish readiness: `ready`
- Distribution posture: `release-grade`
- Immutable release bundles: `3`
- Device classes seen: `Mac, iPhone`
- Missing required device classes: `none`
- Flagship media status: `published`
- Machine-readable payload: [public-proof-status.json](public-proof-status.json)

## Why Adopt Now

- strongest proof path: `Vision -> NLP -> Privacy`
- first demo guide: [../../Examples/DemoApps/IntelligentCamera/README.md](../../Examples/DemoApps/IntelligentCamera/README.md)
- first immutable release proof: [Latest-Release-Proof.md](Latest-Release-Proof.md)
- flagship media truth surface: [Flagship-Media-Status.md](Flagship-Media-Status.md)

## Allowed Public Claims

- The active modular graph builds and tests cleanly.
- The flagship demo path has a dedicated guide and smoke-check.
- Benchmark artifacts, manifests, checksums, provenance, and threshold gates exist.
- A first immutable release baseline exists.
- Device capture, export, import, packet, and intake flows are implemented.

## Blocked Public Claims

- none

# Device Evidence Handoff

Generated export surface for the missing device evidence waves that still block release-grade benchmark positioning.

## Status

- Publish readiness: `ready`
- Distribution posture: `release-grade`
- Pending device classes: `none`
- Queue source: [Device-Evidence-Queue.md](Device-Evidence-Queue.md)
- Intake source: [Device-Evidence-Intake.md](Device-Evidence-Intake.md)
- Runbook source: [Device-Evidence-Runbook.md](Device-Evidence-Runbook.md)
- Machine-readable payload: [device-evidence-handoff.json](device-evidence-handoff.json)

## Export Command

```bash
bash Scripts/export-device-evidence-handoff.sh /absolute/path/to/device-evidence-handoff.tar.gz
```

## Included Surfaces

- queue summary and JSON payload
- intake summary and maintainer runbook
- packet index and per-device packet folders
- release blockers and public proof envelope
- GitHub `device_evidence` issue form

## State

- No pending device evidence waves remain.

